--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@ant-design/icons": "~5.6.1",
     "antd": "^5.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
