--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/icons": "~5.6.1",
     "antd": "^5.28.0",
+    "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.9.5",
